# fall-risk-prediction

./: README.md  main.py  package-lock.json  pyproject.toml  requirements.txt
Research/: fall_prediction_ver_1.0.ipynb  fall_prediction_ver_2.0.ipynb
Research/.ipynb_checkpoints/: Analysis-checkpoint.ipynb
